--- a/localization.yml
+++ b/localization.yml
@@ -1,1 +1,20 @@
-
+NO_PERMISSIONS: '§fУ вас §cнедостаточно §fправ'
+COMMAND_ONLY_CONSOLE: '§fВы §cне можете §fиспользовать данную команду в игре'
+COMMAND_ONLY_PLAYERS: 'This command for only players'
+COOLDOWN: '§fПодождите §c%s §fсекунд перед повторным использованием'
+BOXES_NO_KEYS: 'У вас нету ключей'
+BOXES_IS_OPEN: 'Кейс уже открывают'
+BOXES_COMMAND_HELP: 'Нахуй иди'
+BOXES_COMMAND_GIVE_USE: 'Нахуй иди'
+BOXES_NOT_NUMERIC: 'Нахуй иди'
+BOXES_NOT_FOUND: 'Нахуй иди'
+BOXES_GIVE_SUCCESS: 'Нахуй иди'
+BOXES_COMMAND_GET_USE: 'Нахуй иди'
+BOXES_NOT_FOUND: 'Нахуй иди'
+BOXES_GET_SUCCESS: 'Нахуй иди'
+BOXES_COMMAND_REMOVE_USE: 'Нахуй иди'
+BOXES_NOT_NUMERIC: 'Нахуй иди'
+BOXES_NOT_FOUND: 'Нахуй иди'
+BOXES_REMOVE_SUCCESS: 'Нахуй иди'
+BOXES_COMMAND_UNKNOWN: 'Нахуй иди'
+BOXES_HOLOGRAM: 'Кейс бебры го открывать'
